--- a/teaching/index.html
+++ b/teaching/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <meta name="keywords" content="Iordan Ganev, math, mathematics, home page">
-	<meta name="author" content="Iordan Ganev, Iordan V. Ganev">
+  <meta name="keywords" content="Iordan Ganev, math, mathematics">
+	<meta name="author" content="Iordan Ganev">
   <title>Iordan Ganev</title>
-  <link rel="stylesheet" href="css/stylesheet.css">
+  <link rel="stylesheet" href="../css/stylesheet.css">
   <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
   </script>
   <link href='https://fonts.googleapis.com/css?family=Neuton:400,400i,700,700i' rel='stylesheet'>
@@ -16,72 +16,54 @@
 
 <body>
   <header>
-    <h1><a href="./">Iordan Ganev</a></h1>
+    <h1><a href="../">Iordan Ganev</a></h1>
     <nav>
       <ul>
         <li>
-          <a href="./" class="active">
+          <a href="../">
            Home
             </a>
         </li>
         <li>
-          <a href="research">
+          <a href="../research">
             Research
           </a>
         </li>
         <li>
-          <a href="notes">
+          <a href="../notes">
                 Notes
           </a>
         </li>
         <li>
-          <a href="teaching">
+          <a href="./" class="active">
                 Teaching
           </a>
         </li>
         <li>
-          <a href="other">
+          <a href="../other">
                 Other
           </a>
         </li>
       </ul>
     </nav>
   </header>
-  <div class="intro">
-    <p><img src="assets/ganev.JPG" alt="Iordan Ganev" id="mypicture" /></p>
-    <div>
-      <p>Postdoctoral Researcher<br/>
-        <a href="https://ist.ac.at/research/research-groups/hausel-group/">Tamas Hausel group</a><br/>
-        <a href="https://ist.ac.at/">Institute of Science and Technology Austria</a><br/>
-        <a href="https://www.google.com/maps/place/Institute+of+Science+and+Technology+Austria+(IST+Austria)/@48.3098555,16.2575073,17z/data=!3m1!4b1!4m5!3m4!1s0x476d0c21eacfcc8b:0xdade8cc8640428b3!8m2!3d48.309852!4d16.259696">Am Campus 1, 3400 Klosterneuburg, Austria</a></p>
-      <p><strong>Email:</strong><code class="highlighter-rouge"> &#105;&#111;&#114;&#100;&#097;&#110;&#046;&#103;&#097;&#110;&#101;&#118;&#064;&#105;&#115;&#116;&#046;&#097;&#099;&#046;&#097;&#116;</code> </p>
-      <!-- http://wbwip.com/wbw/emailencoder.html -->
-      <!--<p><strong>Office:</strong> <a href=""></a> 605<br /></p>
-      <p><strong>Phone:</strong></p>-->
-    </div>
-  </div>
-  <h3 id="research-interests-and-background">Research interests and background</h3>
-  <p>My research area is geometric representation theory. Specific topics of interest include the wonderful compactification, D-modules, quantum groups, quiver varieties, Azumaya algebras, and Deligne-Lusztig theory.</p>
+  <h2 id="teaching">Teaching</h2>
+  <h3>IST Austria</h3> TBA
+  <h3>University of Texas, Austin</h3>
+  <ul>
+    <li>Spring 2016: M373K Algebraic Structures 1 and M373L Algebraic Structures 2.</li>
+    <li>Fall 2015: M427J Differential Equations with Linear Algebra.</li>
+    <li>Fall 2013: <a href="https://web.ma.utexas.edu/users/sadun/F13/M408M/">M408M Multivariable Calculus</a>.</li>
+    <li>Fall 2012: M408C Differential and Integral Calculus.</li>
+  </ul>
+  <h3>Royal Holloway</h3>
+  <ul>
+    <li>Spring 2009: MN1025 Business Statistics.</li>
+    <li>Autumn 2008: MT2300 Regression Analysis.</li>
+  </ul>
 
-  <p>My papers and preprints are listed on my <a href="research">research page</a>, and my CV is available <a href="assets/ganev-cv.pdf">here</a>.</p>
-
-  <p>I completed my PhD at the <a href="https://www.ma.utexas.edu/">University of Texas at Austin</a> in 2016 under the guidance of <a href="https://web.ma.utexas.edu/users/benzvi/">David Ben-Zvi</a>.</p>
-
-  <footer>
-    Theme created by <a href="https://asilata.github.io">Asilata</a>. Photo credit: <a href="https://quoc-ho.github.io/">Quoc</a>.
-  </footer>
 
   <!---Google Analytics-->
-
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-92083892-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-92083892-1');
-  </script>
 
 </body>
 
