--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <meta name="keywords" content="Penghui Li, math, mathematics, home page">
 	<meta name="author" content="Penghui Li">
-  <title>Iordan Ganev</title>
+  <title>Penghui Li</title>
   <link rel="stylesheet" href="css/stylesheet.css">
   <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
   </script>
@@ -48,7 +48,7 @@
     </nav>
   </header>
   <div class="intro">
-    <p><img src="assets/ganev.JPG" alt="Iordan Ganev" id="mypicture" /></p>
+    <p><img src="assets/Li.JPG" alt="Penghui Li" id="mypicture" /></p>
     <div>
       <p>Postdoctoral Researcher<br/>
         <a href="https://ist.ac.at/research/research-groups/hausel-group/">Tamas Hausel group</a><br/>
@@ -61,11 +61,11 @@
     </div>
   </div>
   <h3 id="research-interests-and-background">Research interests and background</h3>
-  <p>My research area is geometric representation theory. Specific topics of interest include the wonderful compactification, D-modules, quantum groups, quiver varieties, Azumaya algebras, and Deligne-Lusztig theory.</p>
+  <p>My research area is geometric representation theory and geometric Langlands. </p>
 
-  <p>My papers and preprints are listed on my <a href="research">research page</a>, and my CV is available <a href="assets/ganev-cv.pdf">here</a>.</p>
+  <p>My papers and preprints are listed on my <a href="research">research page</a>, and my CV is available <a href="assets/Li-cv.pdf">here</a>.</p>
 
-  <p>I completed my PhD at the <a href="https://www.ma.utexas.edu/">University of Texas at Austin</a> in 2016 under the guidance of <a href="https://web.ma.utexas.edu/users/benzvi/">David Ben-Zvi</a>.</p>
+  <p>I completed my PhD at the <a href="https://math.berkeley.edu/">University of California at Berkeley</a> in 2016 under the guidance of <a href="https://math.berkeley.edu/~nadler/">David Nadler</a>.</p>
 
   <footer>
     Theme created by <a href="https://asilata.github.io">Asilata</a>. Photo credit: <a href="https://quoc-ho.github.io/">Quoc</a>.
