--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <header>
-    <h1><a href="./">Penghui Li</a></h1>
+    <h1><a href="./">Penghui Li  李鹏辉</a></h1>
     <nav>
       <ul>
         <li>
@@ -29,11 +29,11 @@
             Research
           </a>
         </li>
-        <li>
+    <!--    <li>
           <a href="notes">
                 Notes
           </a>
-        </li>
+        </li>   -->
         <li>
           <a href="teaching">
                 Teaching
@@ -54,21 +54,21 @@
         <a href="https://ist.ac.at/research/research-groups/hausel-group/">Tamas Hausel group</a><br/>
         <a href="https://ist.ac.at/">Institute of Science and Technology Austria</a><br/>
         <a href="https://www.google.com/maps/place/Institute+of+Science+and+Technology+Austria+(IST+Austria)/@48.3098555,16.2575073,17z/data=!3m1!4b1!4m5!3m4!1s0x476d0c21eacfcc8b:0xdade8cc8640428b3!8m2!3d48.309852!4d16.259696">Am Campus 1, 3400 Klosterneuburg, Austria</a></p>
-      <p><strong>Email:</strong><code class="highlighter-rouge"> penghui dot li dot 2016 at gmail dot com</code> </p>
+      <p><strong>Email:</strong><code class="highlighter-rouge"> penghui (dot) li (dot) 2016 (at) gmail (dot) com</code> </p>
       <!-- http://wbwip.com/wbw/emailencoder.html -->
       <!--<p><strong>Office:</strong> <a href=""></a> 605<br /></p>
       <p><strong>Phone:</strong></p>-->
     </div>
   </div>
   <h3 id="research-interests-and-background">Research interests and background</h3>
-  <p>My research area is geometric representation theory and geometric Langlands. </p>
+  <p>My research area is geometric representation theory and geometric Langlands. Specific topics of interest include sheaves, singular supports, Lie groups, higher categories, moduli stacks of vector bundles, character sheaves, Springer theory, Coxeter groups and Hecke algebras.</p>
 
   <p>My papers and preprints are listed on my <a href="research">research page</a>, and my CV is available <a href="assets/Li-cv.pdf">here</a>.</p>
 
-  <p>I completed my PhD at the <a href="https://math.berkeley.edu/">University of California at Berkeley</a> in 2016 under the guidance of <a href="https://math.berkeley.edu/~nadler/">David Nadler</a>.</p>
+  <p>I completed my PhD at the <a href="https://math.berkeley.edu/">University of California, Berkeley</a> in 2016 under the guidance of <a href="https://math.berkeley.edu/~nadler/">David Nadler</a>.</p>
 
   <footer>
-    Theme created by <a href="https://asilata.github.io">Asilata</a>. Photo credit: <a href="https://quoc-ho.github.io/">Quoc</a>.
+    Theme created by <a href="https://asilata.github.io">Asilata</a>. <!--Photo credit: <a href="https://quoc-ho.github.io/">Quoc</a>.-->
   </footer>
 
   <!---Google Analytics-->
