--- a/other/index.html
+++ b/other/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <meta name="keywords" content="Iordan Ganev, math, mathematics, home page">
-	<meta name="author" content="Iordan Ganev">
-  <title>Iordan Ganev</title>
+  <meta name="keywords" content="Penghui Li, math, mathematics, home page">
+	<meta name="author" content="Penghui Li">
+  <title>Penghui Li</title>
   <link rel="stylesheet" href="../css/stylesheet.css">
   <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
   </script>
@@ -16,7 +16,7 @@
 
 <body>
   <header>
-    <h1><a href="../">Iordan Ganev</a></h1>
+    <h1><a href="../">Penghui Li  李鹏辉</a></h1>
     <nav>
       <ul>
         <li>
@@ -29,11 +29,11 @@
             Research
           </a>
         </li>
-        <li>
+      <!--  <li>
           <a href="../notes">
                 Notes
           </a>
-        </li>
+        </li>  -->
         <li>
           <a href="../teaching">
                 Teaching
@@ -52,9 +52,6 @@
 
   <h3>Events</h3>
 
-  <ul>
-    <li><a href="https://asilata.github.io/ssgrt2018/">Summer School on Geometric Representation Theory</a></li>
-  </ul>
 
   <ul>
     <li><a href="https://ist.ac.at/algebraic-geometry">IST Austria Algebraic Geometry and Number Theory Seminar</a></li>
@@ -65,27 +62,7 @@
   </ul>
 
 
-      <div class="papers"></div>
 
-
-<h3 id="links">Links</h3>
-<ul>
-<li><p> <a href="https://samicharity.co.uk/">Supporting African Mathematics Initiatives (SAMI)</a></p></li>
-</ul>
-
-<ul>
-<li><p> <a href="https://www.langenachtderforschung.at/2018/index.html
-">Lange Nacht der Forschung</a></p></li>
-</ul>
-
-<ul>
-<li><p> <a href="www.puzzledpint.com">Puzzled Pint</a></p></li>
-</ul>
-
-      <!--  <p>For now, they are back <a href ="https://sites.google.com/site/iordanganev/notes-2">here</a>, and I'm in the process of transferring them to this page.</p>-->
-
-
-  <!---Google Analytics-->
 
 </body>
 
