--- a/teaching/index.html
+++ b/teaching/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <meta name="keywords" content="Iordan Ganev, math, mathematics">
-	<meta name="author" content="Iordan Ganev">
-  <title>Iordan Ganev</title>
+  <meta name="keywords" content="Penghui Li, math, mathematics">
+	<meta name="author" content="Penghui Li">
+  <title>Penghui Li</title>
   <link rel="stylesheet" href="../css/stylesheet.css">
   <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
   </script>
@@ -16,7 +16,7 @@
 
 <body>
   <header>
-    <h1><a href="../">Iordan Ganev</a></h1>
+    <h1><a href="../">Penghui Li  李鹏辉</a></h1>
     <nav>
       <ul>
         <li>
@@ -29,11 +29,11 @@
             Research
           </a>
         </li>
-        <li>
+    <!--    <li>
           <a href="../notes">
                 Notes
           </a>
-        </li>
+        </li>  -->
         <li>
           <a href="./" class="active">
                 Teaching
@@ -49,17 +49,14 @@
   </header>
   <h2 id="teaching">Teaching</h2>
   <h3>IST Austria</h3> TBA
-  <h3>University of Texas, Austin</h3>
+  <h3>University of California, Berkeley</h3>
   <ul>
-    <li>Spring 2016: M373K Algebraic Structures 1 and M373L Algebraic Structures 2.</li>
-    <li>Fall 2015: M427J Differential Equations with Linear Algebra.</li>
-    <li>Fall 2013: <a href="https://web.ma.utexas.edu/users/sadun/F13/M408M/">M408M Multivariable Calculus</a>.</li>
-    <li>Fall 2012: M408C Differential and Integral Calculus.</li>
-  </ul>
-  <h3>Royal Holloway</h3>
-  <ul>
-    <li>Spring 2009: MN1025 Business Statistics.</li>
-    <li>Autumn 2008: MT2300 Regression Analysis.</li>
+
+    <li>Fall 2015: Linear algebra and diﬀerential equations, discussion sections.</li>
+    <li>Spring 2014: Linear algebra and diﬀerential equations, discussion sections.</li>
+
+    <li>Fall 2013: Linear algebra and diﬀerential equations, discussion sections. </li>
+    <li>Spring 2013: Linear algebra and diﬀerential equations, discussion sections.</li>
   </ul>
 
 
