--- a/research/index.html
+++ b/research/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <header>
-    <h1><a href="../">Penghui Li</a></h1>
+    <h1><a href="../">Penghui Li  李鹏辉</a></h1>
     <nav>
       <ul>
         <li>
@@ -29,11 +29,11 @@
             Research
           </a>
         </li>
-        <li>
+      <!--  <li>
           <a href="../notes">
                 Notes
           </a>
-        </li>
+        </li>   -->
         <li>
           <a href="../teaching">
                 Teaching
