--- a/teaching/index.html
+++ b/teaching/index.html
@@ -52,11 +52,11 @@
   <h3>University of California, Berkeley</h3>
   <ul>
 
-    <li>Fall 2015: Linear algebra and differential equations, discussion sections.</li>
-    <li>Spring 2014: Linear algebra and differential equations, discussion sections.</li>
+    <li>Fall 2015: Math54 Linear algebra and differential equations, discussion sections.</li>
+    <li>Spring 2014: Math54 Linear algebra and differential equations, discussion sections.</li>
 
-    <li>Fall 2013: Linear algebra and differential equations, discussion sections. </li>
-    <li>Spring 2013: Linear algebra and differential equations, discussion sections.</li>
+    <li>Fall 2013: Math54 Linear algebra and differential equations, discussion sections. </li>
+    <li>Spring 2013: Math54 Linear algebra and differential equations, discussion sections.</li>
   </ul>
 
 
