--- a/other/index.html
+++ b/other/index.html
@@ -61,7 +61,9 @@
       <li><a href="https://users.renyi.hu/~agdt/wienbp.html">Vienna-Budapest Algebraic Geometry Seminar</a></li>
   </ul>
 
-
+  <ul>
+      <li><a href="https://math.berkeley.edu/~nadler/grtseminar">UC Berkeley Geometric Representation Theory Seminar</a></li>
+  </ul>
 
 
 </body>
