--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </nav>
   </header>
   <div class="intro">
-    <p><img src="assets/Li.png" alt="Penghui Li" id="mypicture" /></p>
+    <p><img src="assets/Li.jpg" alt="Penghui Li" id="mypicture" /></p>
     <div>
       <p>Postdoctoral Researcher<br/>
         <a href="https://ist.ac.at/research/research-groups/hausel-group/">Tamas Hausel group</a><br/>
