--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <a href="https://ist.ac.at/research/research-groups/hausel-group/">Tamas Hausel group</a><br/>
         <a href="https://ist.ac.at/">Institute of Science and Technology Austria</a><br/>
         <a href="https://www.google.com/maps/place/Institute+of+Science+and+Technology+Austria+(IST+Austria)/@48.3098555,16.2575073,17z/data=!3m1!4b1!4m5!3m4!1s0x476d0c21eacfcc8b:0xdade8cc8640428b3!8m2!3d48.309852!4d16.259696">Am Campus 1, 3400 Klosterneuburg, Austria</a></p>
-      <p><strong>Email:</strong><code class="highlighter-rouge"> penghui (dot) li (dot) 2016 (at) gmail (dot) com</code> </p>
+      <p><strong>Email:</strong><code class="highlighter-rouge"> &#112;&#108;&#105;&#064;&#105;&#115;&#116;&#046;&#097;&#099;&#046;&#097;&#116;</code> </p>
       <!-- http://wbwip.com/wbw/emailencoder.html -->
       <!--<p><strong>Office:</strong> <a href=""></a> 605<br /></p>
       <p><strong>Phone:</strong></p>-->
