--- a/research/index.html
+++ b/research/index.html
@@ -51,7 +51,7 @@
 
   <p><a href="https://arxiv.org/search/?query=penghui+li&searchtype=author&source=header">Arxiv</a> versions can be slightly out of date.</p>
 
-  <h3 id="paperspreprints">Main Publications and Preprints</h3>
+  <h3 id="paperspreprints">Publications and Preprints</h3>
 
 
   <div class="papers">
