--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
   </div>
   <h3 id="research-interests-and-background">Research interests and background</h3>
-  <p>My research area is geometric representation theory and geometric Langlands. Specific topics of interest include sheaves, singular supports, Lie groups, higher categories, moduli stacks of vector bundles, character sheaves, Springer theory, Coxeter groups and Hecke algebras.</p>
+  <p>My research area is geometric representation theory and geometric Langlands. Specific topics of interest include singular supports, Lie groups, higher categories, moduli stacks of vector bundles, character sheaves, Springer theory, Coxeter groups and Hecke algebras.</p>
 
   <p>My papers and preprints are listed on my <a href="research">research page</a>, and my CV is available <a href="assets/Li-cv.pdf">here</a>.</p>
 
