--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <p>Assistant Professor<br/>
     <!--    <a href="https://ist.ac.at/research/research-groups/hausel-group/">Tamas Hausel group</a><br/> -->
         <a href="http://ymsc.tsinghua.edu.cn/en">Yau mathematical Science Center, Tsinghua University</a><br/>
-        <a >Haidian, Beijing, China</a></p>
+        Haidian, Beijing, China</p>
       <p><strong>Email:</strong><code class="highlighter-rouge"> &#108;&#105;&#112;&#101;&#110;&#103;&#104;&#117;&#105;&#064;&#109;&#097;&#105;&#108;&#046;&#116;&#115;&#105;&#110;&#103;&#104;&#117;&#097;&#046;&#101;&#100;&#117;&#046;&#099;&#110; </code> </p>
       <!-- http://wbwip.com/wbw/emailencoder.html -->
       <!--<p><strong>Office:</strong> <a href=""></a> 605<br /></p>
