add journal ref

--- a/research/index.html
+++ b/research/index.html
@@ -57,7 +57,8 @@
   <div class="papers">
     <content>
       <p><strong>A colimit of traces of reflection groups</strong><br/>
-        Submitted.<br/>
+        Proceedings of the AMS,
+Volume 147, Number 11 (Nov. 2019)<br/>
         <abstract>
           <abstractTit>Abstract:</abstractTit>
 Li-Nadler proposed a conjecture about traces of Hecke categories, which implies the semistable part of the Betti Geometric Langlands Conjecture of Ben-Zvi-Nadler in genus 1. We prove a Weyl group analogue of this conjecture. Our theorem holds in the natural generality of reflection groups in Euclidean or hyperbolic space.        </abstract>
@@ -87,7 +88,7 @@ Li-Nadler proposed a conjecture about traces of Hecke categories, which implies 
       <p><strong> Uniformization of semistable bundles on elliptic curves
       </strong><br/>
     with David Nadler</br>
-        Adv. Math. </br>
+    Advances in Mathematics, Vol. 380 (Mar. 2021) </br>
         <abstract>
           <abstractTit>Abstract:</abstractTit>
           Let \(G\) be a connected  reductive complex  algebraic group, and \(E\) a complex elliptic curve. Let \(G_E\) denote the  connected component of the trivial bundle in the stack of semistable \(G\)-bundles on \(E\). We introduce a complex analytic uniformization of \(G_E\) by adjoint quotients of reductive subgroups of the loop group of \(G\). This can be viewed as a nonabelian version of the classical complex analytic uniformization \( E \simeq \mathbb{C}^*/q^{\mathbb{Z}}\). We similarly construct a complex analytic uniformization of \(G\) itself via the exponential map, providing a nonabelian version of the standard isomorphism \(\mathbb{C}^* \simeq \mathbb{C}/\mathbb{Z}\), and a complex analytic uniformization of \(G_E\) generalizing the standard presentation \(E \simeq \mathbb{C}/(\mathbb{Z} \oplus \mathbb{Z} \tau )\). Finally, we apply these results to the study of sheaves with nilpotent singular support. As an application to Betti geometric Langlands conjecture in genus 1, we define a functor from \(Sh_\mathcal{N}(G_E)\) (the semistable part  of the automorphic category) to  \( IndCoh_{\check{\mathcal{N}}}(Locsys_{\check{G}} (E)) \) (the spectral category).
