--- a/research/index.html
+++ b/research/index.html
@@ -53,6 +53,20 @@
 
   <h3 id="paperspreprints">Publications and Preprints</h3>
 
+  <div class="papers">
+    <content>
+      <p><strong>The Jordan--Chevalley decomposition for $G$-bundles on elliptic curves</strong><br/>
+        
+        <abstract>
+          <abstractTit>Abstract:</abstractTit>
+          We study the moduli stack of degree 0 semistable $G$-bundles on an irreducible curve $E$ of arithmetic genus 1, where $G$ is a connected reductive group. Our main result describes a partition of this stack indexed by a certain family of connected reductive subgroups $H$ of $G$ (the $E$-pseudo-Levi subgroups), where each stratum is computed in terms of $H$-bundles together with the action of the relative Weyl group. We show that this result is equivalent to a Jordan--Chevalley theorem for such bundles equipped with a framing at a fixed basepoint. In the case where $E$ has a single cusp (respectively, node), this gives a new proof of the Jordan--Chevalley theorem for the Lie algebra \<mathfrak>g</mathfrak> (respectively, group $G$ ).
+          We also provide a Tannakian description of these moduli stacks and use it to show that if E is an ordinary elliptic curve, the collection of framed unipotent bundles on E is equivariantly isomorphic to the unipotent cone in G. Finally, we classify the E-pseudo-Levi subgroups using the Borel--de Siebenthal algorithm and compute some explicit examples.       </abstract>
+      </p>
+    </content>
+    <p>
+      <a href="https://arxiv.org/abs/1810.07039">[arXiv]</a>
+    </p>
+  </div>
 
   <div class="papers">
     <content>
