--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
   </script>
   <link href='https://fonts.googleapis.com/css?family=Neuton:400,400i,700,700i' rel='stylesheet'>
-  <link rel="icon" href="https://static.ist.ac.at/ist/images/favicon.ico" />
+ <!-- <link rel="icon" href="https://static.ist.ac.at/ist/images/favicon.ico" /> -->
 </head>
 
 <body>
