--- a/research/index.html
+++ b/research/index.html
@@ -55,8 +55,56 @@
 
   <div class="papers">
     <content>
+      <p><strong> Derived categories of character sheaves II: canonical induction/restriction functors
+      </strong>
+     </p>
+    </content>
+    <p><a href="https://arxiv.org/abs/2305.04444">[arXiv]</a>
+    </p>
+  </div>
+
+  <div class="papers">
+
+  <div class="papers">
+    <content>
+      <p><strong>Graded character sheaves, HOMFLY-PT homology, and Hilbert schemes of points on $\CC^2$</strong><br/>
+        with Quoc P. Ho</br>
+      </p>
+    </content>
+    <p>
+      <a href="https://arxiv.org/abs/2305.01306">[arXiv]</a>
+    </p>
+  </div>
+
+  <div class="papers">
+    <content>
+      <p><strong>Functions on the commuting stack via Langlands duality</strong><br/>
+        with David Nadler and Zhiwei Yun</br>
+      </p>
+    </content>
+    <p>
+      <a href="https://arxiv.org/abs/2301.02618">[arXiv]</a>
+    </p>
+  </div>
+
+
+  <div class="papers">
+    <content>
+      <p><strong>Revisiting mixed geometry</strong><br/>
+        with Quoc P. Ho</br>
+      </p>
+    </content>
+    <p>
+      <a href="https://arxiv.org/abs/2202.04833">[arXiv]</a>
+    </p>
+  </div>
+
+
+  <div class="papers">
+    <content>
       <p><strong>Eisenstein series via factorization homology of Hecke categories</strong><br/>
         with Quoc P. Ho</br>
+        Advances in Mathematics, Vol. 404, Part A (Aug. 2022), 32 pages.</br>
       </p>
     </content>
     <p>
@@ -69,10 +117,7 @@
     <content>
       <p><strong>The Jordan--Chevalley decomposition for $G$-bundles on elliptic curves</strong><br/>
         with Dragos Fratila and Sam Gunningham</br>
-        <abstract>
-          <abstractTit>Abstract:</abstractTit>
-          We study the moduli stack of degree 0 semistable G-bundles on an irreducible curve E of arithmetic genus 1, where G is a connected reductive group. Our main result describes a partition of this stack indexed by a certain family of connected reductive subgroups $H$ of G (the E-pseudo-Levi subgroups), where each stratum is computed in terms of H-bundles together with the action of the relative Weyl group. We show that this result is equivalent to a Jordan--Chevalley theorem for such bundles equipped with a framing at a fixed basepoint. In the case where E has a single cusp (respectively, node), this gives a new proof of the Jordan--Chevalley theorem for the Lie algebra g (respectively, group \(G \) ).
-          We also provide a Tannakian description of these moduli stacks and use it to show that if E is an ordinary elliptic curve, the collection of framed unipotent bundles on E is equivariantly isomorphic to the unipotent cone in G. Finally, we classify the E-pseudo-Levi subgroups using the Borel--de Siebenthal algorithm and compute some explicit examples.       </abstract>
+        Represent. Theory 26 (2022), 1268-1323</br>
       </p>
     </content>
     <p>
@@ -83,11 +128,7 @@
   <div class="papers">
     <content>
       <p><strong>A colimit of traces of reflection groups</strong><br/>
-        Proceedings of the AMS,
-Volume 147, Number 11 (Nov. 2019)<br/>
-        <abstract>
-          <abstractTit>Abstract:</abstractTit>
-Li-Nadler proposed a conjecture about traces of Hecke categories, which implies the semistable part of the Betti Geometric Langlands Conjecture of Ben-Zvi-Nadler in genus 1. We prove a Weyl group analogue of this conjecture. Our theorem holds in the natural generality of reflection groups in Euclidean or hyperbolic space.        </abstract>
+        Proceedings of the AMS, Volume 147, Number 11 (Nov. 2019)<br/>
       </p>
     </content>
     <p>
@@ -98,12 +139,8 @@ Li-Nadler proposed a conjecture about traces of Hecke categories, which implies 
   <div class="papers">
     <content>
       <p><strong> Derived categories of character sheaves
-      </strong><br/>
-        Under review, pending revisions.</br>
-        <abstract>
-          <abstractTit>Abstract:</abstractTit>
-          We give a block decomposition of the dg category of character sheaves on a simple and simply-connected complex reductive group \(G\), similar to the one in generalized Springer correspondence. As a corollary, we identify the category of character sheaves on \(G \) as the category of quasi-coherent sheaves on an explicitly defined derived stack \(\widehat{G}\).
-      </p>
+      </strong>
+     </p>
     </content>
     <p><a href="https://arxiv.org/abs/1803.04289">[arXiv]</a>
     </p>
@@ -115,9 +152,6 @@ Li-Nadler proposed a conjecture about traces of Hecke categories, which implies 
       </strong><br/>
     with David Nadler</br>
     Advances in Mathematics, Vol. 380 (Mar. 2021) </br>
-        <abstract>
-          <abstractTit>Abstract:</abstractTit>
-          Let \(G\) be a connected  reductive complex  algebraic group, and \(E\) a complex elliptic curve. Let \(G_E\) denote the  connected component of the trivial bundle in the stack of semistable \(G\)-bundles on \(E\). We introduce a complex analytic uniformization of \(G_E\) by adjoint quotients of reductive subgroups of the loop group of \(G\). This can be viewed as a nonabelian version of the classical complex analytic uniformization \( E \simeq \mathbb{C}^*/q^{\mathbb{Z}}\). We similarly construct a complex analytic uniformization of \(G\) itself via the exponential map, providing a nonabelian version of the standard isomorphism \(\mathbb{C}^* \simeq \mathbb{C}/\mathbb{Z}\), and a complex analytic uniformization of \(G_E\) generalizing the standard presentation \(E \simeq \mathbb{C}/(\mathbb{Z} \oplus \mathbb{Z} \tau )\). Finally, we apply these results to the study of sheaves with nilpotent singular support. As an application to Betti geometric Langlands conjecture in genus 1, we define a functor from \(Sh_\mathcal{N}(G_E)\) (the semistable part  of the automorphic category) to  \( IndCoh_{\check{\mathcal{N}}}(Locsys_{\check{G}} (E)) \) (the spectral category).
       </p>
     </content>
     <p><a href="https://arxiv.org/abs/1510.08762">[arXiv]</a>
